test/sema/null-check-analysis/null-check-extra-unwrap-in-nested-control-stmt.delta
// RUN: %not %delta -typecheck %s | %FileCheck %s

struct S: Copyable {
    S*? a;
}

S*? foo(S* p) {
    var n = p;

    while (n.a != null) {
        if (n === n.a.a) {
            // CHECK: [[@LINE+1]]:23: error: cannot unwrap non-optional type 'S*'
            return n.a!.a;
        }
        n = n.a;
    }

    return null;
}
